data-catalog/base/hue/hue-dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: hue
  labels:
    app: hue
spec:
  selector:
    app: hue
    deploymentconfig: hue
  template:
    metadata:
      labels:
        app: hue
        deploymentconfig: hue
    spec:
      containers:
        - name: hue
          image: hue
          command: ["build/env/bin/hue", "runcpserver"]
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 300m
              memory: 500Mi
            limits:
              cpu: 500m
              memory: 1Gi
          volumeMounts:
            - name: "hue-ini"
              mountPath: /hue/desktop/conf/
            - name: "hive-site-xml"
              mountPath: /etc/hive/conf/
          livenessProbe:
            failureThreshold: 4
            httpGet:
              path: /
              port: 8000
              scheme: HTTP
            periodSeconds: 30
            initialDelaySeconds: 300
            successThreshold: 1
            timeoutSeconds: 5
      restartPolicy: Always
      volumes:
        - name: "hue-ini"
          secret:
            secretName: hue-ini
            items:
              - key: hue.ini
                path: hue.ini
        - name: "hive-site-xml"
          secret:
            secretName: hue-hive-site-xml
            items:
              - key: hive-site.xml
                path: hive-site.xml
  replicas: 1
  triggers:
    - type: ConfigChange
  strategy:
    type: Rolling
