data-catalog/base/hue/hue-mysql-dc.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: hue-mysql
  annotations:
    template.alpha.openshift.io/wait-for-ready: "true"
spec:
  strategy:
    type: Recreate
  triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - mysql
        from:
          kind: ImageStreamTag
    - type: ConfigChange
  replicas: 1
  selector:
    name: hue-mysql
  template:
    metadata:
      labels:
        name: hue-mysql
    spec:
      containers:
        - name: mysqld-exporter
          image: mysqld-exporter
          ports:
            - containerPort: 9104
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /metrics
              port: 9104
          readinessProbe:
            httpGet:
              path: /metrics
              port: 9104
        - name: mysql
          image: mysql
          ports:
            - containerPort: 3306
              protocol: TCP
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - "-i"
                - "-c"
                - >-
                  MYSQL_PWD=$MYSQL_PASSWORD mysql -h 127.0.0.1 -u $MYSQL_USER -D
                  $MYSQL_DATABASE -e 'SELECT 1'
            failureThreshold: 3
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 3306
            timeoutSeconds: 1
          resources:
            limits:
              memory: "512Mi"
          volumeMounts:
            - name: "mysql"
              mountPath: "/var/lib/mysql/data"
          terminationMessagePath: "/dev/termination-log"
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
          capabilities: {}
          securityContext:
            capabilities: {}
            privileged: false
      volumes:
        - name: mysql
          persistentVolumeClaim:
            claimName: hue-mysql
      restartPolicy: Always
      dnsPolicy: ClusterFirst
