data-catalog/base/hue/hue-mysql-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: hue-mysql
  annotations:
    template.openshift.io/expose-uri: 'mysql://{.spec.clusterIP}:{.spec.ports[?(.name=="mysql")].port}'
spec:
  ports:
    - name: hue-mysql
      protocol: TCP
      port: 3306
      targetPort: 3306
  selector:
    deploymentconfig: hue-mysql
  type: ClusterIP
  sessionAffinity: None
status:
  loadBalancer: {}
