data-catalog/base/hue/hue-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hue
  labels:
    app: hue
  annotations:
    haproxy.router.openshift.io/timeout: 200s
spec:
  port:
    targetPort: 8000-tcp
  tls:
    termination: edge
  to:
    kind: Service
    name: hue
    weight: 100
  wildcardPolicy: None
